# nuedc_2022_e

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: data.csv  hamming_fir.csv  hamming_fir_50khz_fs.csv  hanning_fir.csv  音频数据.xlsx
doc/: flowchart.puml
middleware/: CMakeLists.txt  lv_conf.h
src/: CMakeLists.txt  FreeRTOSConfig.h  audio_capture.c  audio_capture.h  lv_port.c  lv_port.h  main.c  main.h  ns2009.c  ns2009.h  servo.c  servo.h  setting.c  setting.h  tmp275.c  tmp275.h
src/lvgl_ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_font_Font1.c  ui_helpers.c  ui_helpers.h  ui_img_1071146721.c  ui_img_145325322.c  ui_img_2133783836.c  ui_img_488394416.c  ui_img_565378741.c
